--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,19 @@ dependencies {
 
 test {
     useTestNG() {
-        suites "src/test/resources/TestNG.xml"
+        suites "src/test/resources/${suite}.xml"
         systemProperty "browser", System.getProperty("browser")
+    }
+}
+
+task regression(type: Test){
+    useTestNG(){
+        suites "src/test/resources/RegressionTests.xml"
+    }
+}
+
+task smoke(type: Test){
+    useTestNG(){
+        suites "src/test/resources/SmokeTests.xml"
     }
 }
