--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
 test {
     useTestNG() {
-        suites "src/test/resources/${suite.xml"
+        suites "src/test/resources/${suite}.xml"
+        
     }
 }
